--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,6 +431,7 @@ IF(DEFINED __GNUWIN32PATH AND EXISTS "${__GNUWIN32PATH}")
 ENDIF(DEFINED __GNUWIN32PATH AND EXISTS "${__GNUWIN32PATH}")
 
 SET(ADDITIONAL_LIBS "")
+SET(ADDITIONAL_INCLUDE_DIRS "")
 #
 # Find ZLIB
 #
@@ -444,6 +445,7 @@ IF(ZLIB_FOUND)
   SET(HAVE_ZLIB_H 1)
   INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
   LIST(APPEND ADDITIONAL_LIBS ${ZLIB_LIBRARIES})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${ZLIB_INCLUDE_DIR})
   IF(WIN32 AND NOT CYGWIN)
     #
     # Test if ZLIB_WINAPI macro is needed to use.
@@ -483,6 +485,7 @@ IF(BZIP2_FOUND)
   SET(HAVE_BZLIB_H 1)
   INCLUDE_DIRECTORIES(${BZIP2_INCLUDE_DIR})
   LIST(APPEND ADDITIONAL_LIBS ${BZIP2_LIBRARIES})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${BZIP2_INCLUDE_DIR})
   # Test if a macro is needed for the library.
   TRY_MACRO_FOR_LIBRARY(
     "${BZIP2_INCLUDE_DIR}" "${BZIP2_LIBRARIES}"
@@ -516,6 +519,7 @@ IF(LIBLZMA_FOUND)
   SET(CMAKE_REQUIRED_LIBRARIES ${LIBLZMA_LIBRARIES})
   INCLUDE_DIRECTORIES(${LIBLZMA_INCLUDE_DIRS})
   LIST(APPEND ADDITIONAL_LIBS ${LIBLZMA_LIBRARIES})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${LIBLZMA_INCLUDE_DIR})
   # Test if a macro is needed for the library.
   TRY_MACRO_FOR_LIBRARY(
     "${LIBLZMA_INCLUDE_DIRS}" "${LIBLZMA_LIBRARIES}"
@@ -558,6 +562,7 @@ IF(LZO2_FOUND)
   SET(HAVE_LZO_LZO1X_H 1)
   INCLUDE_DIRECTORIES(${LZO2_INCLUDE_DIR})
   LIST(APPEND ADDITIONAL_LIBS ${LZO2_LIBRARY})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${LZO2_INCLUDE_DIR})
   #
   # TODO: test for static library.
   #
@@ -585,6 +590,7 @@ IF(LIBB2_FOUND)
   SET(HAVE_BLAKE2_H 1)
   SET(ARCHIVE_BLAKE2 FALSE)
   LIST(APPEND ADDITIONAL_LIBS ${LIBB2_LIBRARY})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${LIBB2_INCLUDE_DIR})
   INCLUDE_DIRECTORIES(${LIBB2_INCLUDE_DIR})
   CMAKE_PUSH_CHECK_STATE()
   SET(CMAKE_REQUIRED_LIBRARIES ${LIBB2_LIBRARY})
@@ -619,6 +625,7 @@ IF(LZ4_FOUND)
   CMAKE_POP_CHECK_STATE()	# Restore the state of the variables
   INCLUDE_DIRECTORIES(${LZ4_INCLUDE_DIR})
   LIST(APPEND ADDITIONAL_LIBS ${LZ4_LIBRARY})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${LZ4_INCLUDE_DIR})
   #
   # TODO: test for static library.
   #
@@ -650,6 +657,7 @@ IF(ZSTD_FOUND)
   SET(HAVE_ZSTD_H 1)
   INCLUDE_DIRECTORIES(${ZSTD_INCLUDE_DIR})
   LIST(APPEND ADDITIONAL_LIBS ${ZSTD_LIBRARY})
+  LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${ZSTD_INCLUDE_DIR})
   CMAKE_PUSH_CHECK_STATE()
   SET(CMAKE_REQUIRED_LIBRARIES ${ZSTD_LIBRARY})
   SET(CMAKE_REQUIRED_INCLUDES ${ZSTD_INCLUDE_DIR})
@@ -790,6 +798,9 @@ IF(ENABLE_MBEDTLS)
     SET(HAVE_LIBMBEDCRYPTO 1)
     LIST(APPEND ADDITIONAL_LIBS ${MBEDCRYPTO_LIBRARY})
     INCLUDE_DIRECTORIES(${MBEDTLS_INCLUDE_DIRS})
+    FOREACH(_it IN MBEDTLS_INCLUDE_DIRS)
+        LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${_it})
+    ENDFOREACH()
 
     LIST(APPEND CMAKE_REQUIRED_INCLUDES ${MBEDTLS_INCLUDE_DIRS})
     LA_CHECK_INCLUDE_FILE("mbedtls/aes.h" HAVE_MBEDTLS_AES_H)
@@ -809,6 +820,7 @@ IF(ENABLE_NETTLE)
   IF(NETTLE_FOUND)
     SET(HAVE_LIBNETTLE 1)
     LIST(APPEND ADDITIONAL_LIBS ${NETTLE_LIBRARIES})
+    LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${NETTLE_INCLUDE_DIR})
     INCLUDE_DIRECTORIES(${NETTLE_INCLUDE_DIR})
 
     LIST(APPEND CMAKE_REQUIRED_INCLUDES ${NETTLE_INCLUDE_DIR})
@@ -834,6 +846,7 @@ IF(ENABLE_OPENSSL AND NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
     SET(HAVE_LIBCRYPTO 1)
     INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
     LIST(APPEND ADDITIONAL_LIBS ${OPENSSL_CRYPTO_LIBRARY})
+    LIST(APPEND ADDITIONAL_INCLUDE_DIRS ${OPENSSL_INCLUDE_DIR})
     SET(CMAKE_REQUIRED_LIBRARIES ${OPENSSL_CRYPTO_LIBRARY})
     SET(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIR})
     LA_CHECK_INCLUDE_FILE("openssl/evp.h" HAVE_OPENSSL_EVP_H)
@@ -2106,6 +2119,28 @@ ENDIF(APPLE)
 IF(ENABLE_TEST)
   ADD_CUSTOM_TARGET(run_all_tests)
 ENDIF(ENABLE_TEST)
+
+IF(ENABLE_INSTALL)
+  SET(INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include")
+
+  CONFIGURE_FILE(
+    ${CMAKE_CURRENT_SOURCE_DIR}/build/cmake/templates/LibArchiveConfig-version.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/LibArchiveConfig-version.cmake @ONLY)
+
+  CONFIGURE_FILE(
+    ${CMAKE_CURRENT_SOURCE_DIR}/build/cmake/templates/LibArchiveConfig.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/LibArchiveConfig.cmake @ONLY)
+
+  INSTALL(
+    FILES
+       ${CMAKE_CURRENT_BINARY_DIR}/LibArchiveConfig.cmake
+       ${CMAKE_CURRENT_BINARY_DIR}/LibArchiveConfig-version.cmake
+    DESTINATION lib/cmake/LibArchive)
+
+  INSTALL(EXPORT libarchive_target
+    FILE LibArchiveTargets.cmake
+    DESTINATION lib/cmake/LibArchive)
+ENDIF(ENABLE_INSTALL)
 
 add_subdirectory(libarchive)
 add_subdirectory(cat)
